2004-07-15  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-dispspec-registry.c, cong-dispspec-registry.h, cong-dispspec.c, cong-document.c, cong-document.h, cong-editor-widget.h, cong-editor-widget3.c, cong-file-properties.c, cong-overview-view.c, cong-primary-window.c, cong-tree-view.c, cong-util.c, cong-view.c, cong-view.h, cursor.c, plugin-save-dispspec.c, popup.c, tree.c, xmldata.c:

	Attempt to handle hybrid documents better: the dispspec for a CongDocument is now just a default, for searching for elements lacking a namespace; search all dispspecs for elements, rather than just the default one. 
2004-07-14  Jeff Martin  <jeff@custommonkey.org>

	* popup.c

	Added icons for comment/uncomment

2004-07-13  Jeff Martin  <jeff@custommonkey.org>

	* tree.c, popup.c

	Added implementation of "Other Elements" menu

2004-07-12  David Malcolm  <dmalcolm@redhat.com>

	* cong-editor-area-unknown-tag.c, cong-editor-area-unknown-tag.h, cong-editor-node-element-unknown.c:

	Add attribute and namespace information to the unknown element display in main editing widget.

2004-07-07  Nickolay V. Shmyrev <nshmyrev@yandex.ru>

	* main.c, cong-app.c : Use popt context to parse command
	line options and open them all in conglomerate, converting
	them to uri.

2004-07-06  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-dispspec-element-gxx.h, cong-dispspec-element.c, cong-dispspec-element.h, cong-document.c, cong-util.c, cong-util.h, gxx-declare-object-from-xml-tree.h, gxx-declare-object-to-xml-tree.h, gxx-object-from-xml-tree.h, gxx-object-to-xml-tree.h, gxx-undefine-shared-macros.h

	Added a spellcheck attribute to dispspec elements; implemented the previously-stubbed function cong_document_should_spellcheck_node to use this

2004-07-05  David Malcolm  <david@davemalcolm.demon.co.uk>

	* cong-editor-node-text.c: 

	Call the various new functions to spellcheck appropriately (when they are fully implemented)

	* cong-util.c, cong-util.h:
